update sidebar menu items

--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -31,38 +31,38 @@
 		
 		<a href="#menu2" class="list-group-item collapsed menu-title" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><span class="hidden-sm-down">Introduction</span></a>
 		<div class="collapse collapse-sublevel" id="menu2">
-			<a href="#menu2sub1" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Getting Started</a>
-			<div class="collapse collapse-sublevel" id="menu2sub1">
-				<a href="{{ site.url }}/Getting-Started/" class="list-group-item" class="list-group-item" data-parent="#menu2sub1">Getting Started</a>
-				<a href="{{ site.url }}/Getting-Started/Server-Requirements.html" class="list-group-item" data-parent="#menu2sub1">Server Requirements</a>
-				<a href="{{ site.url }}/Getting-Started/Installing-DotKernel-3-Frontend.html" class="list-group-item" data-parent="#menu2sub1">Installing DotKernel 3 <code class="highlighter-rouge">frontend</code></a>
-				<a href="#" class="list-group-item" data-parent="#menu2sub1">DotKernel 3 file structure</a>
-				<a href="#" class="list-group-item" data-parent="#menu2sub1">DotKernel 3 packages</a>
-				<a href="#" class="list-group-item" data-parent="#menu2sub1">DotKernel 3 features</a>
+			<a href="#menu2-sub1" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Getting Started</a>
+			<div class="collapse collapse-sublevel" id="menu2-sub1">
+				<a href="{{ site.url }}/Getting-Started/" class="list-group-item" class="list-group-item" data-parent="#menu2-sub1" id="menu2-sub1-item1">Getting Started</a>
+				<a href="{{ site.url }}/Getting-Started/Server-Requirements.html" class="list-group-item" data-parent="#menu2-sub1" id="menu2-sub1-item2">Server Requirements</a>
+				<a href="{{ site.url }}/Getting-Started/Installing-DotKernel-3-Frontend.html" class="list-group-item" data-parent="#menu2-sub1" id="menu2-sub1-item3">Installing DotKernel 3 <code class="highlighter-rouge">frontend</code></a>
+				<a href="#" class="list-group-item" data-parent="#menu2-sub1" id="menu2-sub1-item4">DotKernel 3 file structure</a>
+				<a href="#" class="list-group-item" data-parent="#menu2-sub1" id="menu2-sub1-item5">DotKernel 3 packages</a>
+				<a href="#" class="list-group-item" data-parent="#menu2-sub1" id="menu2-sub1-item6">DotKernel 3 features</a>
 			</div>
-			<a href="#menu2sub2" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Tutorials</a>
-			<div class="collapse collapse-sublevel" id="menu2sub2">
-				<a href="{{ site.url }}/Tutorials/" class="list-group-item" data-parent="#menu2sub2">Tutorials</a>
-				<a href="{{ site.url }}/Tutorials/Creating-a-Contact-Us-Page/" class="list-group-item" data-parent="#menu2sub2">Creating a Contact US Page</a>
-				<a href="" class="list-group-item" data-parent="#menu2sub2">More tutorials soon</a>
+			<a href="#menu2-sub2" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Tutorials</a>
+			<div class="collapse collapse-sublevel" id="menu2-sub2">
+				<a href="{{ site.url }}/Tutorials/" class="list-group-item" data-parent="#menu2-sub2" id="menu2-sub2-item1">Tutorials</a>
+				<a href="{{ site.url }}/Tutorials/Creating-a-Contact-Us-Page/" class="list-group-item" data-parent="#menu2-sub2" id="menu2-sub2-item2">Creating a Contact US Page</a>
+				<a href="" class="list-group-item" data-parent="#menu2-sub2" id="menu2-sub2-item3">More tutorials soon</a>
 			</div>
 		</div>
 		
 		<a href="#menu3" class="list-group-item collapsed menu-title" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><span class="hidden-sm-down">Working with DotKernel 3</span></a>
 		<div class="collapse collapse-sublevel" id="menu3">
-			<a href="#menu3sub1" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Guidelines</a>
-			<div class="collapse collapse-sublevel" id="menu3sub1">
-				<a href="{{ site.url }}/Guidelines/" class="list-group-item" data-parent="#menu3sub1">Guidelines</a>
-				<a href="{{ site.url }}/Guidelines/PSR/" class="list-group-item" data-parent="#menu3sub1">PSR Guidelines</a>
-				<a href="{{ site.url }}/Guidelines/Coding-Guidelines/" class="list-group-item" data-parent="#menu3sub1">Coding Guidelines</a>
-				<a href="{{ site.url }}/Guidelines/Documentation-Guidelines/" class="list-group-item" data-parent="#menu3sub1">Documentation Guidelines</a>
-				<a href="#" class="list-group-item" data-parent="#menu3sub1">Creating an open source DotKernel 3 package (soon)</a>
-				<a href="#" class="list-group-item" data-parent="#menu3sub1">Creating a private DotKernel 3 package (soon)</a>
+			<a href="#menu3-sub1" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Guidelines</a>
+			<div class="collapse collapse-sublevel" id="menu3-sub1">
+				<a href="{{ site.url }}/Guidelines/" class="list-group-item" data-parent="#menu3-sub1" id="menu3-sub1-item1">Guidelines</a>
+				<a href="{{ site.url }}/Guidelines/PSR/" class="list-group-item" data-parent="#menu3-sub1" id="menu3-sub1-item2">PSR Guidelines</a>
+				<a href="{{ site.url }}/Guidelines/Coding-Guidelines/" class="list-group-item" data-parent="#menu3-sub1" id="menu3-sub1-item3">Coding Guidelines</a>
+				<a href="{{ site.url }}/Guidelines/Documentation-Guidelines/" class="list-group-item" data-parent="#menu3-sub1" id="menu3-sub1-item4">Documentation Guidelines</a>
+				<a href="#" class="list-group-item" data-parent="#menu3-sub1" id="menu3-sub1-item5">Creating an open source DotKernel 3 package (soon)</a>
+				<a href="#" class="list-group-item" data-parent="#menu3-sub1" id="menu3-sub1-item6">Creating a private DotKernel 3 package (soon)</a>
 			</div>
-			<a href="#menu3sub2" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">dot-* packages</a>
-			<div class="collapse collapse-sublevel" id="menu3sub2">
-				<a href="{{ site.url }}/Packages/" class="list-group-item" data-parent="#menu3sub2">dot-* packages</a>
-				<a href="{{ site.url }}/Packages/README.html" class="list-group-item" data-parent="#menu3sub2">View dot-* package list</a>
+			<a href="#menu3-sub2" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">dot-* packages</a>
+			<div class="collapse collapse-sublevel" id="menu3-sub2">
+				<a href="{{ site.url }}/Packages/" class="list-group-item" data-parent="#menu3-sub2" id="menu3-sub2-item1">dot-* packages</a>
+				<a href="{{ site.url }}/Packages/README.html" class="list-group-item" data-parent="#menu3-sub2" id="menu3-sub2-item2">View dot-* package list</a>
 			</div>
 		</div>
 		
