PR #15 docs update

--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -11,8 +11,9 @@
 		    <a href="#menu1-sub1" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Overview</a>
 		    <div class="collapse collapse-sublevel" id="menu1-sub1">
 		    	<a href="{{ site.url }}/Overview/" class="list-group-item" data-parent="#menu1-sub1" id="menu1-sub1-item1">Overview</a>
-		    	<a href="{{ site.url }}/Overview/Developing-for-DotKernel-3.html" class="list-group-item" data-parent="#menu1-sub1" id="menu1-sub1-item2">Developing for DotKernel 3</a>
-		        <a href="{{ site.url }}/Overview/DotKernel-3-Overview.html" class="list-group-item" data-parent="#menu1-sub1" id="menu1-sub1-item3">DotKernel 3 Overview</a>
+		        <a href="{{ site.url }}/Overview/Release-Notes.html" class="list-group-item" data-parent="#menu1-sub1" id="menu1-sub1-item2">Release Notes</a>
+		    	<a href="{{ site.url }}/Overview/Developing-for-DotKernel-3.html" class="list-group-item" data-parent="#menu1-sub1" id="menu1-sub1-item3">Developing for DotKernel 3</a>
+		        <a href="{{ site.url }}/Overview/DotKernel-3-Overview.html" class="list-group-item" data-parent="#menu1-sub1" id="menu1-sub1-item4">DotKernel 3 Overview</a>
 		    </div>
 		    <a href="#menu1-sub2" class="list-group-item submenu-title" data-toggle="collapse" aria-expanded="false">Prerequisites</a>
 		    <div class="collapse collapse-sublevel" id="menu1-sub2">
@@ -26,6 +27,7 @@
 			    <a href="{{ site.url }}/Prerequisites/Understanding-Middleware.html" class="list-group-item" data-parent="#menu1-sub2" id="menu1-sub2-item8">Understanding Middleware</a>
 			    <a href="{{ site.url }}/Prerequisites/Zend-Stratigility.html" class="list-group-item" data-parent="#menu1-sub2" id="menu1-sub2-item9">Zend Stratigility</a>
 			    <a href="#" class="list-group-item" data-parent="#menu1-sub2" id="menu1-sub2-item10">Zend Expressive</a>
+			    <a href="{{ site.url }}/Prerequisites/Webpack.html" class="list-group-item" data-parent="#menu1-sub2" id="menu1-sub2-item11">Webpack</a>
 			</div>
 		</div>
 		
