update left sidebar menu active items js function

--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -1,6 +1,6 @@
 <!-- BEGIN Styling -->
 
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i" rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i" rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel='stylesheet' type='text/css'>
 
 
